--- a/src/TransAtlanticSlaveTrade/CHANGELOG
+++ b/src/TransAtlanticSlaveTrade/CHANGELOG
@@ -1,3 +1,13 @@
+Version 2.5.0 - Jan 2012
+* General error handling improvements
+* Contrib notes now save after page refresh in editor / admin view
+* Now only one conbrib is allowed per voyage at a time
+* Misc. changes to impute program
+* Editor / admin can now delete values from sources section in main form
+* Editor / admin can now edit date values 
+* Contrib canceling submission no longer deletes original voyage
+* 
+
 Version 2.4.2 - July 25, 2011
 
 * This is a micro-release to increase the field size of a title field and catch an error if a contributer source does not save correctly. 
