#184 - added to CHANGELOG and DEPLOYNOTES
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@2431 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/CHANGELOG
+++ b/src/TransAtlanticSlaveTrade/CHANGELOG
@@ -1,4 +1,4 @@
-Version 2.5.0 - Jan 2012
+Version 2.5.0 - ? 2012
 * General error handling improvements
 * Contrib notes now save after page refresh in editor / admin view
 * Now only one conbrib is allowed per voyage at a time
@@ -6,7 +6,7 @@ Version 2.5.0 - Jan 2012
 * Editor / admin can now delete values from sources section in main form
 * Editor / admin can now edit date values 
 * Contrib canceling submission no longer deletes original voyage
-* 
+* Updated publish proc to not delete edited undecided voyages.
 
 Version 2.4.2 - July 25, 2011
 
