fixed link in readme

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ South America, and North America. The National Endowment for the
 Humanities is the principal sponsor of the project, and it is an Emory
 University Digital Library Research Initiative.
 
-'Link To Site <http://www.slavevoyages.org/>_'
+Link To Site: http://www.slavevoyages.org/
 
 Deployment Notes
 ================
