removed one feference to the name db

--- a/src/TransAtlanticSlaveTrade/CHANGELOG
+++ b/src/TransAtlanticSlaveTrade/CHANGELOG
@@ -1,10 +1,4 @@
-Version 2.5.1 - May 2012
-* Updated text and links on legal page to point to GitHub code
-* Updated tex and links homepage to point old names DB links to Origins landing page
-* Updated Origins landing page to have a more prominent link to the Origins site and other additional text changes
-* Updated download page to have new section for names DB and added new file download link
-
-Version 2.5.0 - Jan 2012
+Version 2.5.0 - ? 2012
 * General error handling improvements
 * Contrib notes now save after page refresh in editor / admin view
 * Now only one conbrib is allowed per voyage at a time
@@ -13,6 +7,7 @@ Version 2.5.0 - Jan 2012
 * Editor / admin can now edit date values 
 * Contrib canceling submission no longer deletes original voyage
 * Updated publish proc to not delete edited undecided voyages.
+* Removed Names DB faq from database
 
 Version 2.4.2 - July 25, 2011
 
